# ComicDB

./: .gitignore  CHANGELOG.md  Pipfile  README.md  TO_DO.md  build.bat  comicdb.sqlite  comp.bat  main.py  pyproject.toml  requirements.txt  setup.py  updates.json
ComicDB/: __init__.py
docs/: Makefile  README.md  api.md  conf.py  configuration.md  faq.md  features.md  getting-started.md  index.md  index.rst  installation.md  requirements-docs.txt  support.md  translate.sh
docs/additional/: changelog.rst  credits.rst  license.rst
docs/developer/: api.rst  architecture.rst  contributing.rst  installation.rst  testing.rst
docs/locale/it/LC_MESSAGES/: index.rst
docs/locale/it/LC_MESSAGES/user/: configuration.rst  faq.rst  features.rst  installation.rst  quickstart.rst
docs/user/: configuration.rst  faq.rst  features.rst  installation.rst  quickstart.rst
gui/: comics_panel.py  main_window.py  splash.py  splash_screen.py
struttura/: about.py  comic_scanner.py  config.py  database.py  help.py  lang.py  log_viewer.py  menu.py  unrar_utils.py  update_checker.py  updates.py  version.py
tests/: test_rar_support.py
