[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComicDB"
version = "0.0.3"
description = "A comic book database management system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
authors = [
    {name = "Nsfr750", email = "nsfrt750@yandex.com"},
]
dependencies = [
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "comicapi>=3.2.0",
    "unrar>=0.4",
    "rarfile>=4.0",
    "pikepdf>=8.0.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "ttkbootstrap>=1.10.1",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "pylint>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
